fix commit title word wrap
fixes #344

--- a/components/graph/graph.less
+++ b/components/graph/graph.less
@@ -64,7 +64,7 @@
 
         .title {
           font-size: 1.3em;
-          white-space: break-word;
+          word-wrap: break-word;
           display: block;
         }
 
